hero img spacing to main fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -215,8 +215,7 @@ main {
 
 .hero img{
     width: 100%;
-
-    
+    display: block;    
 }
 
 /* end */
